--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,5 +3,5 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/spring_web_blog
 spring.datasource.username=root
 spring.datasource.password=root
-spring.jpa.show-sql:true
+spring.jpa.show-sql=true
 
